# fromsuper

./: Cargo.toml  README.md
fromsuper/: Cargo.toml
fromsuper/src/: lib.rs
fromsuper/tests/: anyhow.rs  basic.rs
fromsuper_macros/: Cargo.toml  README.md
fromsuper_macros/src/: generics.rs  lib.rs
