[package]
name = "fromsuper"
version = "0.1.0"
edition = "2021"
authors = ["Christoph Döpmann <dev@christoph.berlin>"]
license = "MIT OR Apache-2.0"

description = "Macro helpers to derive new sub-structs from existing super-structs."

documentation = "https://docs.rs/fromsuper"
homepage = "https://github.com/cdoepmann/fromsuper"
repository = "https://github.com/cdoepmann/fromsuper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fromsuper_macros = { path = "../fromsuper_macros" }

[dev-dependencies]
anyhow = "1"