[package]
name = "fromsuper"
version = "0.1.0"
edition = "2021"
authors = ["Christoph Döpmann <dev@christoph.berlin>"]
license = "MIT OR Apache-2.0"

description = "Macro helpers to derive new sub-structs from existing super-structs, potentially unpacking Options."
keywords = ["substructs", "superstructs", "unpacking", "macros", "proc-macros"]
categories = ["data-structures", "development-tools", "rust-patterns"]

documentation = "https://docs.rs/fromsuper"
homepage = "https://github.com/cdoepmann/fromsuper"
repository = "https://github.com/cdoepmann/fromsuper"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fromsuper_macros = { path = "../fromsuper_macros", version = "0.1.0" }

[dev-dependencies]
anyhow = "1"